2007-11-16  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-plugins-base.doap:
	Oops, fix the release name.

2007-11-16  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-plugins-base.doap:
	Add 0.10.15 release

2007-11-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to CVS

=== release 0.10.15 ===

2007-11-15  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.15, "No need to argue"

2007-11-15  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/vs6/libgstfft.dsp:
	Convert line endings to DOS.

2007-11-15  Sebastien Moutte <sebastien@moutte.net>

	* win32/vs6/gst_plugins_base.dsw:
	* win32/vs6/libgstfft.dsp:
	* win32/MANIFEST:
	Add a project file for fft plugin and remove socket
	based plugin which don't build from the workspace.
	* win32/vs6/libgstaudio.dsp:
	* win32/vs6/libgstrtp.dsp:
	* win32/vs6/libgsttag.dsp:
	Convert line endings back to DOS.
	Fixes #496724

2007-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/vs6/libgstinterfaces.dsp:
	* win32/vs6/libgstrtsp.dsp:
	Convert line endings back to DOS

2007-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-libs/gst/fft/kiss_fft_f32.h:
	* gst-libs/gst/fft/kiss_fft_f64.h:
	* gst-libs/gst/fft/kiss_fft_s16.h:
	* gst-libs/gst/fft/kiss_fft_s32.h:
	Don't include malloc.h which doesn't exist on Mac OSX.
	Instead, pull in glib.h and use g_malloc/g_free for 
	consistency. Fixes: #496548

2007-11-09  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstdecodebin2.c:
	  Dont leak ghostpad. Fixes #475451.

2007-11-09  Wim Taymans  <wim.taymans@gmail.com>

	* docs/design/design-decodebin.txt:
	* gst/playback/gstdecodebin2.c: (analyze_new_pad):
	Update some more docs and comments.

2007-11-06  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Sebastien Moutte  <sebastien moutte net>

	* gst-libs/gst/rtp/gstrtcpbuffer.c: (gst_rtcp_ntp_to_unix),
	  (gst_rtcp_unix_to_ntp):
	* gst-libs/gst/rtp/gstrtppayloads.c: (gst_rtp_payload_info_for_name):